--- a/WebTest/.classpath
+++ b/WebTest/.classpath
@@ -30,5 +30,14 @@
 	<classpathentry kind="lib" path="C:/apache-tomcat-7.0.68/lib/tomcat-util.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat-7.0.68/lib/websocket-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-collections-2.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-dbcp.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-fileupload.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-io-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/commons-pool.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/mysql-connector-java-5.1.5-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/common440p/workspace/WebTest/WebContent/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
